--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "description": "- [ ]  Deve ser possível criar um link\r     - [ ]  Não deve ser possível criar um link com URL encurtada mal formatada\r     - [ ]  Não deve ser possível criar um link com URL encurtada já existente\r - [ ]  Deve ser possível deletar um link\r - [ ]  Deve ser possível obter a URL original por meio de uma URL encurtada\r - [ ]  Deve ser possível listar todas as URL’s cadastradas\r - [ ]  Deve ser possível incrementar a quantidade de acessos de um link\r - [ ]  Deve ser possível exportar os links criados em um CSV\r     - [ ]  Deve ser possível acessar o CSV por meio de uma CDN (Amazon S3, Cloudflare R2, etc)\r     - [ ]  Deve ser gerado um nome aleatório e único para o arquivo\r     - [ ]  Deve ser possível realizar a listagem de forma performática\r     - [ ]  O CSV deve ter campos como, URL original, URL encurtada, contagem de acessos e data de criação.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/infra/http/server.ts"
+    "dev": "tsx watch --env-file .env src/infra/http/server.ts",
+    "test": "dotenv -e .env.test -- vitest run",
+    "test:watch": "dotenv -e .env.test -- vitest",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +18,24 @@
   "devDependencies": {
     "@biomejs/biome": "^2.0.6",
     "@types/node": "^24.0.10",
+    "dotenv-cli": "^8.0.0",
+    "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4",
+    "vitest-tsconfig-paths": "^3.4.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/lib-storage": "^3.842.0",
     "@fastify/cors": "^11.0.1",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.2",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
+    "postgres": "^3.4.7",
     "zod": "^3.25.71"
   }
 }
